<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="br.com.avantigames.forcax.app.GameWinActivity"
    android:background="@drawable/bg_game">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/win"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/gamewin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pontua_o"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="120"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp" />


        <Button
        android:id="@+id/btn_tentar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_layout"
        android:text="@string/continuar"
        android:onClick="onContinuar"/>

        <Button
        android:id="@+id/btn_record"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_layout"
        android:text="@string/recordes"
        android:onClick="onRecordes"/>

        <Button
        android:id="@+id/sair_btn"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_layout"
        android:text="@string/sair"
        android:onClick="sair"/>

    </LinearLayout>


</ScrollView>
