<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:elevation="10dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp"
    tools:context=".app.ItemPalavraViewHolderActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/palavra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:text="Texto - "
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/palavra_frase_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/palavra"
            android:layout_toEndOf="@+id/palavra"
            android:text="@string/teresina"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/dica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/palavra"
            android:layout_centerVertical="true"
            android:text="Dica - "
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/dica_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/dica"
            android:text="@string/cidade"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="11dp"
            android:text="Tema - "
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tema_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tema"
            android:layout_toEndOf="@+id/palavra"
            android:text="@string/tema"
            android:textAlignment="center"
            android:textSize="15sp" />
    </RelativeLayout>

</android.support.v7.widget.CardView>